# GenAI-Superstream

./: .coverage  .env.sample  .gitignore  README.md  README_tutorial.md  USAGE.md  duckdb_advanced.db  hello_world_mcp.py  main.py  requirements.txt  run.sh  scc_help.txt  scc_output.txt  setup.py
.roo/: mcp.json
advanced/: .env  .env.sample  INSTALL.md  README.md  README_data_gatherer.md  __init__.py  config.py  data_gatherer.py  duckdb_advanced.db  example_mcp_integration.py  init_duckdb.py  install.py  install.sh  main.py  requirements.txt  run.py  run.sh
advanced/analytics/: __init__.py  metrics.py  visualizations.py
advanced/db/: __init__.py  connection.py  queries.py
config/: default_config.yaml
db/: README.md  init_duckdb.py  insert_ai_jobs_duckdb.py  insert_ai_jobs_sqlite.py  jobs_analytics_example.py  uk_jobs.duckdb
docs/: architecture.md  domain_model.md  implementation_plan.md  overview.md  project_specification.md  requirements.md
genai-mcp/: Dockerfile  Makefile  README.md  pyproject.toml  sse_server.py
genai-mcp/genai_mcp/: __init__.py  config.py  server.py
gradio/: hello_world_client.py
logs/: .gitkeep
models/: .gitkeep
presentation/: genai-superstream.txt
scripts/: debug_mcp.py  direct_test.py  review_uk_jobs.py  run_client.py  run_server.py  start_servers.py  test_api_server.py  train_model.py
src/: README.md  __init__.py  api_server.py  client.py  data.py  mcp_connector.py  model.py  server.py  utils.py
tests/: README.md  __init__.py  run_tests.py  test_data.py  test_mcp_integration.py  test_model.py  test_server.py
(+22 files in other folders)
